[gd_scene load_steps=11 format=2]

[ext_resource path="res://ui/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/gui/button/wide/wide_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/gui/font/font_big.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/ui/pause_screen/pause_screen.gd" type="Script" id=4]
[ext_resource path="res://system/components/callers/comp_method_caller.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/gui/icons/settings_icon.png" type="Texture" id=6]
[ext_resource path="res://ui/gui/button/small/small_button.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/gui/icons/home_icon.png" type="Texture" id=8]

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;


uniform bool active = false;


void fragment() {
	vec4 final_color = texture(TEXTURE, UV);
	if (active) {
		final_color = vec4(1.0 - final_color.rgb, final_color.a);
	}
	COLOR = final_color;
}"

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = SubResource( 2 )
shader_param/active = false

[node name="pause_screen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 4 )

[node name="center_container" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="grid_container" type="GridContainer" parent="center_container"]
margin_left = 44.0
margin_top = 36.0
margin_right = 195.0
margin_bottom = 98.0
rect_pivot_offset = Vector2( 44, 40 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/vseparation = 1

[node name="pause_text" type="Label" parent="center_container/grid_container"]
margin_right = 151.0
margin_bottom = 11.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 3 )
text = "ui.pause_screen.paused"
align = 1
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="center_container/grid_container"]
margin_top = 12.0
margin_right = 151.0
margin_bottom = 20.0
custom_constants/margin_bottom = 8

[node name="resume_button" parent="center_container/grid_container" instance=ExtResource( 2 )]
material = SubResource( 3 )
margin_left = 35.0
margin_right = 115.0

[node name="text" parent="center_container/grid_container/resume_button/center_container" index="0"]
margin_left = 0.0
margin_right = 104.0
text = "ui.pause_screen.resume"

[node name="h_grid_container" type="GridContainer" parent="center_container/grid_container"]
margin_left = 53.0
margin_top = 42.0
margin_right = 97.0
margin_bottom = 62.0
size_flags_horizontal = 4
columns = 2

[node name="settings_button" parent="center_container/grid_container/h_grid_container" instance=ExtResource( 7 )]
disabled = true
id = "settings_screen"

[node name="icon" parent="center_container/grid_container/h_grid_container/settings_button/center_container" index="0"]
margin_left = 2.0
margin_top = 2.0
margin_right = 18.0
margin_bottom = 18.0
texture = ExtResource( 6 )

[node name="home_button" parent="center_container/grid_container/h_grid_container" instance=ExtResource( 7 )]
margin_left = 24.0
margin_right = 44.0

[node name="icon" parent="center_container/grid_container/h_grid_container/home_button/center_container" index="0"]
margin_left = 2.0
margin_top = 2.0
margin_right = 18.0
margin_bottom = 18.0
texture = ExtResource( 8 )

[node name="unpause_method_caller" parent="center_container/grid_container/h_grid_container/home_button" instance=ExtResource( 5 )]
position = Vector2( -42, 21 )
method = {
"caller": "game_functions",
"method": "resume_game"
}

[node name="go_to_main_menu_method_caller" parent="center_container/grid_container/h_grid_container/home_button" instance=ExtResource( 5 )]
position = Vector2( -42, 21 )
method = {
"args": [ "change_scene_request", "main_menu" ],
"caller": "game_events",
"method": "emit_signal"
}

[connection signal="pressed" from="center_container/grid_container/resume_button" to="." method="toggle_pause"]
[connection signal="pressed" from="center_container/grid_container/h_grid_container/home_button" to="center_container/grid_container/h_grid_container/home_button/unpause_method_caller" method="call_method"]
[connection signal="pressed" from="center_container/grid_container/h_grid_container/home_button" to="center_container/grid_container/h_grid_container/home_button/go_to_main_menu_method_caller" method="call_method"]

[editable path="center_container/grid_container/resume_button"]
[editable path="center_container/grid_container/h_grid_container/settings_button"]
[editable path="center_container/grid_container/h_grid_container/home_button"]
